<resources>
    <string name="app_name">Keja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Profile Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile_name">Profile Name</string>
    <string name="status">Status goes here</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="location">Location</string>
    <string name="choose">Choose image</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="upload_a_photo">Upload a photo</string>
    <string name="house_description">House Description</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_house">Add House</string>
    <string name="favourite">Favourite</string>
    <string name="locate">Location</string>
    <string name="about">About</string>
    <string name="creator">Created by Gideon Kiprotich</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
