<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_house" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/locate" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
